resources/public/css/lapyrinthe.css
@import 'common.css';
@import 'game_info.css';
@import 'game_board.css';
@import 'leaderboard.css';
@import 'player.css';
@import 'help_texts.css';

#app {
    text-align: center;
}

/* Header */
#header {
    background-color: var(--black);
    margin-bottom: 1em;
    color: var(--white);
    font-size: 1.2em;
    font-weight: 900;
}
#header #app-name {
    text-align: left;
}
#header #app-name img {
    height: 2em;
}
#header #app-name a {
    font-family: 'Dancing Script', cursive;
    text-decoration: none;
    color: var(--white);
    font-size: 1.2em;
}

#header .now-playing.human {
}

#header .now-playing.ai {
}

#header .now-playing .btn {
    padding: 0.3em 1em;
    margin: 0.5em;
}

/* Footer */
#footer {
    position: fixed;
    bottom: 0px;
    color: var(--white);
    background-color: var(--black);
}
#footer .done-by a {
    
}
#footer .copyrights {
    text-align: right;
    font-size: 0.8em;
}
/* Main */
#lapyrinthe div.col {
    padding-left: 2px;
}
#lapyrinthe div.row {
    padding-bottom: 2px;
}
#lapyrinthe row {
    margin-bottom: 2px;
}

#lapyrinthe td.player,
#lapyrinthe td.enemy-0,
#lapyrinthe td.enemy-1,
#lapyrinthe td.enemy-2,
#lapyrinthe td.enemy-3,
#lapyrinthe td.enemy-4 {
}

.board-icon {
    height: 17px;
    width: 17px;
}
		
h2.subtitle {
    margin-top: 0;
    margin-bottom: 1em;
    font-size: 1.2em;
    color: var(--links-color);
    font-weight: 600;
    display: none;
}

h2.subtitle.initial {
    position: absolute;
    font-size: 2em;
    top: 5em;
    display:block;
    z-index: 91;
}

h2.subtitle span, #intro-screen .is-title {
    background-color: var(--white);
    opacity: 0.85;
    font-weight: 900;
    border: 1px solid var(--black);
    border-radius: 10px;
    padding: 0.5em;
}

.full-screen-overlay {
    position: fixed;
    z-index: 90;
}

/* Intro screen */
#intro-screen {
    width: 100%;
    height: 100%;
    background-image: url("../img/rabbit-wallp.png");
    background-color: var(--white);
    background-repeat: repeat;
}

#intro-screen .row {
    height: 100%;
}

#intro-screen .row .col {
    padding-top: 8em;
}
#intro-screen .intro-bullet {
    padding-top: 0.5em;
    font-size: 1.5em;
    background-color: var(--white);
    opacity: 0.9;
}

#intro-screen .intro-bullet div {
    font-style: italic;
    font-size: 0.8em;
    margin-left: 1.8em;
}

#intro-screen .ib-strong {
    font-weight: 900;
}

#intro-screen h1, #intro-screen h2 {
    font-family: 'Dancing Script', cursive;
    text-align: center;
}
#intro-screen h1 {
    font-weight: 900;
    color: var(--black);
    font-size: 2.3em;
}

#intro-screen h2 {
    color: var(--black);
    opacity: 0.9;
    font-size: 1.7em;
}

#intro-screen .intro-col > div:not(.is-title){
    display: none;
}

/* Loading */

#loading {
    text-align: center;
    bottom: 20px;
    width: 100%;
}

#loading img {
    width: 20%;
    opacity: 0.7;
}

#loading button {
    display: none;
    margin-top: 5em;
}

#loading img {
    border-radius: 20px;
    border: 5px solid var(--black);
}

.game-over, .game-won, .game-nextlevel {
    display: none;
    position: fixed;
    top: 0px;
    width: 100%;
    height: 100%;
    text-align: center;
    z-index: 10;
}

.game-over {
    background-color: var(--black);
    color: var(--white);
}
.game-won, .game-nextlevel { background-color: var(--white); }

.game-over img, .game-won img, .game-nextlevel img {
    position: relative;
    width: 33%;
    left: 33%;
    display: block;
    border-radius: 100%;
}
.game-over img, .game-nextlevel img {
    margin-top: 10%;
}

.game-nextlevel img {
    margin-top: 5%;
}
.game-nextlevel .panel-bordered {
    width: 50%;
    margin-left: 25%;
    margin-top:1em;
    font-size: 1.1em;
}

.game-nexlevel #next-level-info {
    margin-top: 0.5em;
}

.game-won p {
    font-family: "Courier New";
    font-weight: 900;
}
.game-won p br {
    padding-top: 0.3em;
}
.game-won p span.slide {
    position: relative;
    top: -1em;
    font-size: 1.5em;
    background-color: var(--white);
    color: var(--white);
    z-index: 10;
}

.game-nextlevel img {
}

.game-over button {
    margin-top: 1em;
    color: var(--black);
}

